--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/redux-saga": "^0.10.5",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
+    "react-collapsible": "^2.10.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
