refactor: deploy changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my_canvas",
+  "homepage": "https://kaesid.github.io/skills-honing-2022/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
